syntax = "proto3";

package search;

service CodeSearch {
  rpc Search(SearchRequest) returns (stream SearchResult);
  rpc Index(IndexRequest) returns (IndexResponse);
}

message SearchRequest {
  string query = 1;
  int32 max_results = 2;
  repeated string include_paths = 3;  // Glob patterns for paths to include
  repeated string exclude_paths = 4;  // Glob patterns for paths to exclude
  bool is_regex = 5;                  // Treat query as regex pattern
  bool symbols_only = 6;              // Search only in discovered symbols (function/class names)
}

message SearchResult {
  string file_path = 1;
  string content = 2;
  int32 line_number = 3;
  double score = 4;
  MatchType match_type = 5;
  int32 match_start = 6;       // Start position of match in content
  int32 match_end = 7;         // End position of match in content
  bool content_truncated = 8;  // Whether content was truncated from original line
}

enum MatchType {
  TEXT = 0;
  SYMBOL_DEFINITION = 1;
  SYMBOL_REFERENCE = 2;
}

message IndexRequest {
  repeated string paths = 1;
}

message IndexResponse {
  int32 files_indexed = 1;
  int64 total_size = 2;
  string message = 3;
}
